--- a/src/pages/waiting-use/waiting-use.html
+++ b/src/pages/waiting-use/waiting-use.html
@@ -52,7 +52,11 @@
         <div class="btn-list">
           <ion-row>
             <ion-col>
-              <button disabled="{{item?.list[0].isPack === 0 ? true: false}}" class="operator-button" color="light" ion-button (click)="pack(item?.list[0].id, userId)">
+              <button *ngIf="item?.list[0].isPack === 0" disabled="true" class="operator-button" color="light" ion-button (click)="pack(item?.list[0].id, userId)">
+                <ion-icon name="ios-cube-outline"></ion-icon>
+                打包
+              </button>
+              <button *ngIf="item?.list[0].isPack === 1"  class="operator-button" color="light" ion-button (click)="pack(item?.list[0].id, userId)">
                 <ion-icon name="ios-cube-outline"></ion-icon>
                 打包
               </button>
@@ -148,8 +152,8 @@
 
 
 
-  <div *ngIf="dataList.length === 0" style="font-size: 2rem;margin-top: 30vh;margin-left: 40vw">
-    暂无数据
-  </div>
+  <!--<div *ngIf="dataList.length === 0" style="font-size: 2rem;margin-top: 30vh;margin-left: 40vw">-->
+    <!--暂无数据-->
+  <!--</div>-->
 
 </ion-content>
