--- a/src/pages/setting/setting.html
+++ b/src/pages/setting/setting.html
@@ -21,9 +21,9 @@
     <button ion-item  (click)="openRechargePage()">
       充值
     </button>
-    <button ion-item  (click)="openPage('listPage')">
-      语言
-    </button>
+    <!--<button ion-item  (click)="openPage('listPage')">-->
+      <!--语言-->
+    <!--</button>-->
     <button ion-item  (click)="openSelectLocation()">
       地区位置
     </button>
