--- a/src/pages/waiting-use-list/waiting-use-list.html
+++ b/src/pages/waiting-use-list/waiting-use-list.html
@@ -60,17 +60,17 @@
         <div class="btn-list">
           <ion-row>
             <ion-col>
-              <button *ngIf="p.isPack === '0'" disabled="true" class="operator-button" color="light" ion-button (click)="pack(item?.list[0].id, userId)">
-                <ion-icon name="ios-cube-outline"></ion-icon>
-                打包
-              </button>
-              <button *ngIf="p.isPack === '1'"  class="operator-button" color="light" ion-button (click)="pack(item?.list[0].id, userId)">
+              <!--<button *ngIf="p.isPack === '0'" disabled="true" class="operator-button" color="light" ion-button (click)="pack(p.id, p.isPack)">-->
+                <!--<ion-icon name="ios-cube-outline"></ion-icon>-->
+                <!--打包-->
+              <!--</button>-->
+              <button class="operator-button" color="light" ion-button (click)="pack(p.id, p.isPack)">
                 <ion-icon name="ios-cube-outline"></ion-icon>
                 打包
               </button>
             </ion-col>
             <ion-col>
-              <button class="operator-button" color="light" ion-button (click)="holdOrder(p.id, userId)">
+              <button class="operator-button" color="light" ion-button (click)="holdOrder(p.id)">
                 <ion-icon name="ios-hand-outline"></ion-icon>
                 留餐
               </button>
@@ -78,13 +78,13 @@
           </ion-row>
           <ion-row>
             <ion-col>
-              <button class="operator-button" color="light" ion-button (click)="edit(p.id, userId)">
+              <button class="operator-button" color="light" ion-button (click)="edit(p.id)">
                 <ion-icon name="ios-create-outline"></ion-icon>
                 编辑
               </button>
             </ion-col>
             <ion-col>
-              <button class="operator-button" ion-button color="light" (click)="cancelOrder(p.id, userId)">
+              <button class="operator-button" ion-button color="light" (click)="cancelOrder(p.id)">
                 <ion-icon name="ios-trash-outline"></ion-icon>
                 退订
               </button>
