--- a/src/pages/waiting-use/waiting-use.html
+++ b/src/pages/waiting-use/waiting-use.html
@@ -35,8 +35,8 @@
 
     <ion-item-sliding style="margin-bottom: 3vh">
       <ion-item tappable (click)="gotoDetailList(item)">
-        <img src="https://dininghall.blob.core.windows.net/product/bb4ecee246e44ebdad0ef41ca1e8320e.png"/>
-        <!--<img src="{{item.list[0].imgUrl}}"/>-->
+        <!--<img src="https://dininghall.blob.core.windows.net/product/bb4ecee246e44ebdad0ef41ca1e8320e.png"/>-->
+        <img src="{{item.list[0].blobPath}}"/>
         <div class="card-title">
           <div style="font-size: 2rem">
             {{item?.list[0].mealType}}
@@ -51,38 +51,27 @@
       </ion-item>
       <ion-item-options side="right">
         <div class="btn-list">
-          <ion-row>
-            <ion-col>
-              <!--<button *ngIf="item?.list[0].isPack === 0" disabled="true" class="operator-button" color="light" ion-button (click)="pack(item?.list[0].id)">-->
-                <!--<ion-icon name="ios-cube-outline"></ion-icon>-->
-                <!--打包-->
-              <!--</button>-->
               <button class="operator-button" color="light" ion-button (click)="pack(item?.list[0].id, item?.list[0].isPack)">
                 <ion-icon name="ios-cube-outline"></ion-icon>
                 打包
               </button>
-            </ion-col>
-            <ion-col>
               <button class="operator-button" color="light" ion-button (click)="holdOrder(item?.list[0].id)">
                 <ion-icon name="ios-hand-outline"></ion-icon>
                 留餐
               </button>
-            </ion-col>
-          </ion-row>
-          <ion-row>
-            <ion-col>
               <button class="operator-button" color="light" ion-button (click)="edit(item?.list[0].id)">
                 <ion-icon name="ios-create-outline"></ion-icon>
                 编辑
               </button>
-            </ion-col>
-            <ion-col>
               <button class="operator-button" ion-button color="light" (click)="cancelOrder(item?.list[0].id)">
                 <ion-icon name="ios-trash-outline"></ion-icon>
                 退订
               </button>
-            </ion-col>
-          </ion-row>
+                <!--<button *ngIf="item?.list[0].isPack === 0" disabled="true" class="operator-button" color="light" ion-button (click)="pack(item?.list[0].id)">-->
+                <!--<ion-icon name="ios-cube-outline"></ion-icon>-->
+                <!--打包-->
+                <!--</button>-->
+
         </div>
         <!--<button class="operator-button" color="light" ion-button (click)="holdOrder(p.id, userId)">-->
           <!--<ion-icon name="ios-hand-outline"></ion-icon>-->
