--- a/src/pages/qr-code/qr-code.html
+++ b/src/pages/qr-code/qr-code.html
@@ -17,8 +17,8 @@
   <ion-list>
     <ion-list-header>
       <div style="text-align: center">
-        <h2>GLE00001</h2>
-        <p>当天日期：2018-4-26</p>
+        <h2>{{userNo}}</h2>
+        <p>当天日期：{{todayStr}}</p>
       </div>
     </ion-list-header>
     <ion-item style="text-align: center">
