--- a/src/pages/setting/setting.html
+++ b/src/pages/setting/setting.html
@@ -18,9 +18,9 @@
     <button ion-item  (click)="openPersonInfo()">
       个人信息
     </button>
-    <button ion-item  (click)="openRechargePage()">
-      充值
-    </button>
+    <!--<button ion-item  (click)="openRechargePage()">-->
+      <!--充值-->
+    <!--</button>-->
     <!--<button ion-item  (click)="openPage('listPage')">-->
       <!--语言-->
     <!--</button>-->
@@ -34,24 +34,24 @@
       <!--用户指南-->
       <!--&lt;!&ndash;<ion-badge item-end>3</ion-badge>&ndash;&gt;-->
     <!--</button>-->
-    <!--<button ion-item  (click)="openPage('listPage')">-->
-      <!--版本信息-->
-      <!--<ion-note clear item-end>-->
-        <!--1.0.0版本-->
-      <!--</ion-note>-->
-    <!--</button>-->
-    <!--<button ion-item  (click)="openPage('listPage')">-->
-      <!--隐私政策-->
-    <!--</button>-->
-    <!--<button ion-item  (click)="openPage('listPage')">-->
-      <!--法律法规-->
-    <!--</button>-->
-    <button ion-item  (click)="openAboutPage()">
-      关于我们
+    <button ion-item>
+      版本信息
+      <ion-note *ngIf="appVersionStr" clear item-end>
+        {{appVersionStr}}版本
+      </ion-note>
     </button>
+    <button ion-item  (click)="openLaws()">
+      隐私政策
+    </button>
+    <button ion-item  (click)="openLaws()">
+      法律法规
+    </button>
+    <!--<button ion-item  (click)="openAboutPage()">-->
+      <!--关于我们-->
+    <!--</button>-->
   </ion-list>
   <ion-list no-lines>
-    <button ion-item (click)="openPage('listPage')">
+    <button ion-item (click)="logout()">
       退出当前账号
     </button>
   </ion-list>
