--- a/src/pages/personal-info/personal-info.html
+++ b/src/pages/personal-info/personal-info.html
@@ -17,7 +17,7 @@
   <ion-list>
     <ion-item tappable (click)="goQRCode(userInfo?.no)">
       <ion-thumbnail item-start>
-        <img src="{{userInfo.avatar_url || 'assets/imgs/logo.png'}}">
+        <img src="{{userInfo.avatar_url || 'assets/icon/icon.png'}}">
       </ion-thumbnail >
       <h2 style="margin-left: 5vw">
         <p ion-text>{{userInfo.name || '还没有昵称'}}</p>
